# AISumm

./: README.md
back/: main.py  pyproject.toml
back/dao/: articles.db  database.py
back/model/: classifier.py  model.py  summarizer.py
back/model/classifier_model/: config.json  model.safetensors
front/: package-lock.json  package.json
front/src/: App.css  App.jsx
train/: infer.py  pyproject.toml  summarizer.py  test_infer_simple.py
train/kind/: config.py  data_processing.py  predict.py  train.py
train/kind/model/: bert_model.py
train/sum/: train.py
